--- a/victory.html
+++ b/victory.html
@@ -11,8 +11,8 @@
     <h1>Bravo !</h1>
     <p>Félicitations, vous avez réussi toutes les énigmes et accompli votre mission.</p>
     <p>Votre équipe est un exemple de collaboration et d’intelligence !</p>
-    <a href="setup.html">
-      <button class="startclass">Rejouer</button>
+    <a href="index.html">
+      <button class="replaybutton">Rejouer</button>
     </a>
   </div>
 </body>
