--- a/index.html
+++ b/index.html
@@ -3,26 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>UNLOCK : Épreuve Finale</title>
+  <title>UNLOCK : Configuration des Joueurs</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <img class="logo" src="css/image/logo.png" alt="Unlock Logo">
-    <button id="start" class="start">START</button>
-    <div id="timer">30:00</div>
-    <div class="mdp">
-      <label for="password" class="password">Entrez le mot de passe :</label>
-      <input type="text" id="password" placeholder="Mot de passe" class="placeholder">
-      <button id="validate" class="validate">VALIDER</button>
+  <div id="playerSetup">
+    <h1>Ajoutez les joueurs</h1>
+    <div id="playerInputs">
+      <!-- 4 champs de saisie pour les joueurs -->
+      <input type="text" placeholder="Pseudo Joueur 1" class="playerInput">
+      <input type="text" placeholder="Pseudo Joueur 2" class="playerInput">
+      <input type="text" placeholder="Pseudo Joueur 3" class="playerInput">
+      <input type="text" placeholder="Pseudo Joueur 4" class="playerInput">
     </div>
-    <div class="message" id="message">Résolvez les énigmes pour gagner !</div>
-    
-    <!-- Bouton pour activer le mode accéléré -->
-    <button id="finalButton" class="finalbutton">FINALE</button>
-    
-    <!-- Conteneur pour les classes des joueurs -->
-    <div id="playerClasses" class="player-classes"></div>
+      <button id="assignClasses" class="validateclass">Assigner les classes</button>
+    <div id="assignedClasses"></div>
+    <a href="play.html">
+      <button id="startGame" class="startclass">START</button>
+    </a>
+  </div>
 
-    <script src="scripts/game.js"></script>
-</body>  
+  <script src="scripts/playerSetup.js"></script>
+</body>
 </html>
