--- a/lose.html
+++ b/lose.html
@@ -17,8 +17,8 @@
     <h1 class="redh1">Mission échouée.</h1>
     <p class="redp">Votre intrusion a été repérée après trois tentatives ratées.</p>
     <p class="redp">Reprenez-vous et réessayez avec votre équipe !</p>
-    <a href="setup.html">
-      <button class="startclass">Rejouer</button>
+    <a href="index.html">
+      <button class="replaybutton">Rejouer</button>
     </a>
   </div>
 </body>
