add colors on buttons and sounds

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <input type="text" placeholder="Pseudo Joueur 4" class="playerInput">
     </div>
       <button id="assignClasses" class="validateclass">Assigner les classes</button>
-    <div id="assignedClasses"></div>
+    <div id="assignedClasses" class="assignClasses"></div>
     <a href="play.html">
       <button id="startGame" class="startclass">START</button>
     </a>
