--- a/lose.html
+++ b/lose.html
@@ -15,7 +15,7 @@
 
   <div class="container">
     <h1 class="redh1">Mission échouée.</h1>
-    <p class="redp">Votre intrusion a été repérée après trois tentatives ratées.</p>
+    <p class="redp">Votre intrusion a été repérée.</p>
     <p class="redp">Reprenez-vous et réessayez avec votre équipe !</p>
     <a href="index.html">
       <button class="replaybutton">Rejouer</button>
