--- a/victory.html
+++ b/victory.html
@@ -7,6 +7,10 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body class="victorypage">
+  <audio autoplay>
+    <source src="css/audio/happysong.mp3" type="audio/mp3">
+    Votre navigateur ne supporte pas l'élément audio.
+  </audio>
   <div class="container">
     <h1>Bravo !</h1>
     <p>Félicitations, vous avez réussi toutes les énigmes et accompli votre mission.</p>
